--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.2",
     "expo-constants": "~16.0.1",
+    "expo-device": "^6.0.2",
     "expo-font": "~12.0.4",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "^0.28.6",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~3.5.11",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
