--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     "react-native-appwrite": "^0.3.0",
     "react-native-calendars": "^1.1305.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "twrnc": "^4.2.0"
   },
