--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -16,24 +16,23 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-picker/picker": "^2.7.6",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.2",
-    "expo-constants": "~16.0.1",
+    "expo": "~51.0.14",
+    "expo-constants": "~16.0.2",
     "expo-device": "^6.0.2",
     "expo-font": "~12.0.4",
     "expo-linking": "~6.3.1",
-    "expo-notifications": "^0.28.6",
-    "expo-permissions": "^14.4.0",
-    "expo-router": "~3.5.11",
-    "expo-splash-screen": "~0.27.4",
+    "expo-notifications": "~0.28.9",
+    "expo-router": "~3.5.16",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-appwrite": "^0.3.0",
     "react-native-calendars": "^1.1305.0",
     "react-native-gesture-handler": "~2.16.1",
